--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -71,7 +71,7 @@
 												<section class="wrapper style1">
 													<div class="inner"</div>
 													<div style="background-color: #b74e91;" class="box">
-														<h2>What if there was an engaging evidence-based magazine that delighted readers and supported their learning journey? </h2>
+														<h2>What if there was a beautiful and practical research review that delighted readers and supported their learning journey? </h2>
 													</div>
 
 												</section>
@@ -81,9 +81,12 @@
 														<span class="image titleimg left "><img src="vision.jpg" width=alt=""/></span>
 														<h2>The Approach</h2>
 
-														<p>This project was more straight forward than other Habitry projects: research what else was out in the market, then make something 10x better on a ridiculously short time span.</p>
+														<p>This project was more straight forward than other Habitry projects: research what else was out in the market, then make something 10x better on a ridiculously short time span. </p>
 
 														<p>This time we used an Agile UX approach. We gave ourselves 1 month, divided into two sprints, to research, design, write, produce, and sell the initial issue to see if there was enough demand to make more.</p>
+
+														<p>Plus, Omar had done this before. He'd recruited a team to publish a research review for HR managers in graduate school. So he brought that experience to bear on <em>The Motivator</em>.</p>
+
 												</div>
 												</section>
 
@@ -97,6 +100,7 @@
 														<p>Next, we asked them about other research reviews they were reading. Once we had our list of what else was out there, we purchased copies of the reviews they had mentioned and disected what we thought we needed for an MVP.</p>
 
 														<p>We then took those ideas back to our community to see if we were in the ballpark on what they wanted.</p>
+
 
 														<div class="table-wrapper">
 																						<table>
