--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Omar Ganai - Résumé</title>
+		<title>Omar Ganai — Résumé</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!-- stylesheets -->
