--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -101,39 +101,51 @@
 
 														<p>We then took those ideas back to our community to see if we were in the ballpark on what they wanted.</p>
 
-
-														<div class="table-wrapper">
-																						<table>
-																							<tbody>
-																								<tr>
-																									<td><b>Features</b></td>
-																								</tr>
-																								<tr>
-																									<td>Deliver a hyper practical training experience across multiple sessions</td>
-																								</tr>
-																								<tr>
-																									<td>Allow the instructor to provide ongoing support at scale</td>
-																								</tr>
-																								<tr>
-																									<td>Guide coaches on dealing with challenging scenarios and conversations</td>
-																								</tr>
-																								<tr>
-																									<td>Fill the feedback vacuum coaches find themselves in.</td>
-																								</tr>
-																								<tr>
-																									<td>Include group discussions so students could share questions and comments with peers</td>
-																								</tr>
-																								<tr>
-																									<td>Provide evidence-based, actionable, engaging content</td>
-																								</tr>
-
-																							</tbody>
-																						</table>
-										 </div>
+														<h3>Vision</h3>
+														<p>Using notes from this process, we developed a list of must-have features we knew we needed to include, but something else jumped out at us when we looked at all the material that health coaches had been consuming: they were all hideous. </p>
+														<p>It became clear to the team that we only wanted to make this thing if it was beautiful.</p>
+														<p>This meant an MVP couldn't be a word document or a two-column PDF all in Times New Roman. We wanted to differentiate ourselves by make something that took our customers' breath away. It needed to be a Minimal Beautiful Product.</p>
+														<p>For Stevo, this presented a larger challenge. He had done the graphic design for dozens of Habitry web, mobile, and small print projects, but he had never designed a magazine. He didn't even know what software one could use to do such a thing. But that had never stopped him before.</p>
+														<p>And besides, we had a whole 17 days left to do it.</p>
 
 												 </div>
 												</section>
+												<section class="wrapper style1">
+													<div class="inner">
 
+														<h2>Sprint #2: Build It & Ship It</h2>
+														<h3>Making a Magazine in 17 days</h3>
+														<p>We knew we wanted to make something beautiful, but we had also learned what other features our "MBP" would need to have.</p>
+
+														<table>
+															<tbody>
+																<tr>
+																	<td><b>Requirements</b></td>
+																</tr>
+																<tr>
+																	<td>Be beautiful (duh)</td>
+																</tr>
+																<tr>
+																	<td>Be available in PDF and print</td>
+																</tr>
+																<tr>
+																	<td>Contain an editorial</td>
+																</tr>
+																<tr>
+																	<td>Contain reviews of resarch with quotes from researchers explaining the applications</td>
+																</tr>
+																<tr>
+																	<td>Contain as many "practical tips" as possible</td>
+																</tr>
+																<tr>
+																	<td>Cost no more than $0.40 per page</td>
+																</tr>
+
+															</tbody>
+														</table>
+
+												 </div>
+												</section>
 												<section  class="wrapper style1">
 													<div class="inner">
 														<span class="image titleimg left "><img src="motivatenyc.jpg" width=alt=""/></span>
@@ -150,35 +162,6 @@
 														<h2>Ideation</h2>
 														<h3>Defining Requirements</h3>
 														<p>Using notes from the Discovery process, we developed personas of coaches to guide us through the ideation process. This customer development work suggested some features that we validated against the work done by researcher and intervention designer <a href="http://www.johnmarshallreeve.org">Johnmarshall Reeve</a>.</p>
-
-														<div class="table-wrapper">
-																						<table>
-																							<tbody>
-																								<tr>
-																									<td><b>Features</b></td>
-																								</tr>
-																								<tr>
-																									<td>Deliver a hyper practical training experience across multiple sessions</td>
-																								</tr>
-																								<tr>
-																									<td>Allow the instructor to provide ongoing support at scale</td>
-																								</tr>
-																								<tr>
-																									<td>Guide coaches on dealing with challenging scenarios and conversations</td>
-																								</tr>
-																								<tr>
-																									<td>Fill the feedback vacuum coaches find themselves in.</td>
-																								</tr>
-																								<tr>
-																									<td>Include group discussions so students could share questions and comments with peers</td>
-																								</tr>
-																								<tr>
-																									<td>Provide evidence-based, actionable, engaging content</td>
-																								</tr>
-
-																							</tbody>
-																						</table>
-										 </div>
 
 												 </div>
 												</section>
