--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -102,14 +102,13 @@
 														<span class="image titleimg left "><img src="requirements.jpg" width=alt=""/></span>
 
 														<h2>Ideation</h2>
-														<h3>Defining Requirements</h3>
 														<p>Using notes from the Discovery process, we developed personas of coaches to guide us through the ideation process. This customer development work suggested some features that we validated against the work done by researcher and intervention designer <a href="http://www.johnmarshallreeve.org">Johnmarshall Reeve</a>.</p>
 
 														<div class="table-wrapper">
 																						<table>
 																							<tbody>
 																								<tr>
-																									<td><b>Features</b></td>
+																									<td><b>Requirements</b></td>
 																								</tr>
 																								<tr>
 																									<td>Deliver a hyper practical training experience across multiple sessions</td>
