--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -108,24 +108,33 @@
 																						<table>
 																							<tbody>
 																								<tr>
-																									<td><b>Requirements</b></td>
+																									<td>Requirement</td>
+																									<td>Description</td>
 																								</tr>
 																								<tr>
+																									<td class="align-center">1</td>
 																									<td>Deliver a hyper practical training experience across multiple sessions</td>
 																								</tr>
 																								<tr>
+																									<td class="align-center">2</td>
+
 																									<td>Allow the instructor to provide ongoing support at scale</td>
 																								</tr>
 																								<tr>
+																									<td class="align-center">3</td>
+
 																									<td>Guide coaches on dealing with challenging scenarios and conversations</td>
 																								</tr>
 																								<tr>
+																									<td class="align-center">4</td>
 																									<td>Fill the feedback vacuum coaches find themselves in.</td>
 																								</tr>
 																								<tr>
+																									<td class="align-center">5</td>
 																									<td>Include group discussions so students could share questions and comments with peers</td>
 																								</tr>
 																								<tr>
+																									<td class="align-center">6</td>
 																									<td>Provide evidence-based, actionable, engaging content</td>
 																								</tr>
 
@@ -244,35 +253,35 @@
 																							<table>
 																								<tbody>
 																									<tr>
-																										<td><b>Habit</b></td>
+																										<td class="align-center"><b>Habit</b></td>
 																										<td><b>Open-Ended Questions</b></td>
 																									</tr>
 																									<tr>
-																										<td>1</td>
+																										<td class="align-center">1</td>
 																										<td>Ask an open-ended question</td>
 																									</tr>
 																									<tr>
-																										<td>2</td>
+																										<td class="align-center">2</td>
 																										<td>Get clients interested in their own experience</td>
 																									</tr>
 																									<tr>
-																										<td>3</td>
+																										<td class="align-center">3</td>
 																										<td>Help clients notice their personal values</td>
 																									</tr>
 																									<tr>
-																										<td><b>Habit</b></td>
+																										<td class="align-center"><b>Habit</b></td>
 																										<td><b>Reflective Listening Statements</b></td>
 																									</tr>
 																									<tr>
-																										<td>1</td>
+																										<td class="align-center">1</td>
 																										<td>Paraphrase one word your client said</td>
 																									</tr>
 																									<tr>
-																										<td>2</td>
+																										<td class="align-center">2</td>
 																										<td>Paraphrase motivations</td>
 																									</tr>
 																									<tr>
-																										<td>3</td>
+																										<td class="align-center">3</td>
 																										<td>Paraphrase negative emotions</td>
 																									</tr>
 																								</tbody>
@@ -298,15 +307,15 @@
 																										<td><b>Client Habit Design</b></td>
 																									</tr>
 																									<tr>
-																										<td>1</td>
+																										<td class="align-center">1</td>
 																										<td>Writing Habit Statements</td>
 																									</tr>
 																									<tr>
-																										<td>2</td>
+																										<td class="align-center">2</td>
 																										<td>Goldilocksing (creating optimal challenge)</td>
 																									</tr>
 																									<tr>
-																										<td>3</td>
+																										<td class="align-center">3</td>
 																										<td>Designing Core Habits</td>
 																									</tr>
 																									<tr>
@@ -314,15 +323,15 @@
 																										<td><b>Motivational Feedback</b></td>
 																									</tr>
 																									<tr>
-																										<td>1</td>
+																										<td class="align-center">1</td>
 																										<td>Give an unexpected compliment</td>
 																									</tr>
 																									<tr>
-																										<td>2</td>
+																										<td class="align-center">2</td>
 																										<td>Give informational feedback on the process</td>
 																									</tr>
 																									<tr>
-																										<td>3</td>
+																										<td class="align-center">3</td>
 																										<td>Give developmental feedback</td>
 																									</tr>
 																								</tbody>
@@ -348,15 +357,15 @@
 																											<td><b>Create Connection</b></td>
 																										</tr>
 																										<tr>
-																											<td>1</td>
+																											<td class="align-center">1</td>
 																											<td>Introduce your clients to each other</td>
 																										</tr>
 																										<tr>
-																											<td>2</td>
+																											<td class="align-center">2</td>
 																											<td>Invite clients to share reflections with each other</td>
 																										</tr>
 																										<tr>
-																											<td>3</td>
+																											<td class="align-center">3</td>
 																											<td>Invite clients to teach each other</td>
 																										</tr>
 																										<tr>
@@ -364,15 +373,15 @@
 																											<td><b>Foster Psychological Safety</b></td>
 																										</tr>
 																										<tr>
-																											<td>1</td>
+																											<td class="align-center">1</td>
 																											<td>Share a story about how you learned from failure</td>
 																										</tr>
 																										<tr>
-																											<td>2</td>
+																											<td class="align-center">2</td>
 																											<td>Show clients how to ask for support from the group</td>
 																										</tr>
 																										<tr>
-																											<td>3</td>
+																											<td class="align-center">3</td>
 																											<td>Have a crucial conversation with someone violating your community values</td>
 																										</tr>
 																									</tbody>
