--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -146,62 +146,24 @@
 
 												 </div>
 												</section>
-												<section  class="wrapper style1">
-													<div class="inner">
-														<span class="image titleimg left "><img src="motivatenyc.jpg" width=alt=""/></span>
-														<h2>Discovery</h2>
 
-														<p>On the advice of Angel Investor <a href="https://www.wikiwand.com/en/Jesse_Robbins">Jesse Robbins</a>, Habitry started a series of <a href="https://www.wikiwand.com/en/Unconference">Unconferences</a> — <b><a href="http://www.motivatesumm.it">The Motivate Summits</a></b>. These open, unscripted gatherings proved to be a fertile ground for exploring the non-technical approaches that health coaches were using, and the great lengths to which they were going to scale their businesses into "the other 167 hours" a week they were not with their clients.</p>
-														<p>Once Habitry had customers using Habitry iOS, we also brought in those customers for interviews. These interviews highlighted  gaps between between the skills they had and wanted to learn, and their learning experiences with the solutions they were already using to improve their coaching skills. </p>
+												<section id="three" class="wrapper style1">
+													<div class="inner">
+													<div class="row">
+																<!-- Text -->
+																	<div class="4u">
+																		<h2>Designing</h2>
+																	</div>
+																 <div class="8u$">
+																	 <p>In 2016, Habitry sold Essentials of Habit Coaching as part of Habitry Professionals to <a href="https://liftthebar.com/">Lift the Bar</a> in the UK. It is now the largest, evidence-based behavior change education system in the UK and part of the largest experiment in autonomy-supportive education in the world.</p>
+
+																 </div>
+													</div>
+
+
 												</div>
 												</section>
 
-												<section class="wrapper style1">
-													<div class="inner">
-
-														<h2>Ideation</h2>
-														<h3>Defining Requirements</h3>
-														<p>Using notes from the Discovery process, we developed personas of coaches to guide us through the ideation process. This customer development work suggested some features that we validated against the work done by researcher and intervention designer <a href="http://www.johnmarshallreeve.org">Johnmarshall Reeve</a>.</p>
-
-												 </div>
-												</section>
-
-												<section class="wrapper style1">
-													<div class="inner">
-														<h2>Motivating User Behavior</h2>
-
-														<p>Next we conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action to build their skills. The diagram below was inspired by <a href="twitter.com/du5tb1n">Dustin DiTomasso</a> and <a href="https://twitter.com/amybphd">Amy Bucher</a> of mad*pow.</p>
-
-										 							<span class="image fit"><img src="comb.png" alt=""/></span>
-																 <table>
-																	 <tbody>
-																		 <tr>
-																			 <td style="background-color: #e0402b;"><b>PSYCHOLOGICAL CAPABILITY</b></td>
-																			 <td>Coaches needed support with knowledge, skill, memory, attention, and decision-making to motivate behavior change in clients.</td>
-																		 </tr>
-																		 <tr>
-																			 <td style="background-color: #e0402b;"><b>PHYSICAL CAPABILITY</b></td>
-																			 <td>—</td>
-																		 </tr>
-																		 <tr>
-																			 <td style="background-color: #f88432;"><b>REFLECTIVE MOTIVATION</b></td>
-																			 <td> Coaches needed motivating process goals, a boost in confidence in their capabilities, and rationales for why the Essentials habits should be adopted by them.</td>
-																		 </tr>
-																		 <tr>
-																			 <td style="background-color: #f88432;"><b>AUTOMATIC MOTIVATION</b></td>
-																			 <td> Coaches needed help forming the habit of checking in with their team.</td>
-																		 </tr>
-																		 <tr>
-																			 <td style="background-color: #00b342;"><b>PHYSICAL OPPORTUNITY</b></td>
-																			 <td>Coaches a program that fit into their busy lifestyle and schedule.</td>
-																		 </tr>
-																		 <td style="background-color: #00b342;"><b>SOCIAL OPPORTUNITY</b></td>
-																		 <td>Coaches needed empathy for the challenges they faced while helping clients.</td>
-																	 </tr>
-																	 </tbody>
-																 </table>
-												 </div>
-												</section>
 												<section class="wrapper style1">
 													<div class="inner"</div>
 													<div style="background-color: #b74e91;" class="box">
@@ -209,38 +171,6 @@
 														<p>We aimed to increase Capability, Motivation, and Opportunity by selecting appropriate <b><a href="https://www.researchgate.net/publication/236064731_The_Behavior_Change_Technique_Taxonomy_v1_of_93_Hierarchically_Clustered_Techniques_Building_an_International_Consensus_for_the_Reporting_of_Behavior_Change_Interventions">Behavior Change Techniques</a>.</b></p>
 														<span class="image"><img src="designingasystem.png" alt=""/></span>
 
-													</div>
-												</section>
-
-												<section  class="wrapper style1">
-													<div class="inner style1">
-														<span class="image left"><img src="workshop.png" alt=""/></span>
-
-														<h2>Improving Capability</h2>
-														<p>We improved Capability by targeting Knowledge, Skills, Memory, and Decision-Making processes. We provided information on how to support client habit formation and motivation and how to practice the skills of coaching.</p>
-														<p>We used the Behavior Change Techniques of Goals-Setting, Action Planning, Behavioral Contracts, Shaping Knowledge, Demonstration of Behavior, and Self-Monitoring of Behavior.</p>
-													</div>
-												</section>
-
-												<section  class="wrapper style1">
-													<div class="inner style1">
-														<span class="image left"><img src="discussion.png" alt=""/></span>
-
-														<h2>Improving Motivation</h2>
-															<p>We improved motivation by targeting Goals, Beliefs about Capabilities, Optimism, and Professional Identity.</p>
-															<p>We supported coach Autonomy with the provision of Meaningful Choice, Rationales, and Avoidance of Control. </p>
-															<p>We supported coach Competence by Clarifying Expectations, providing Optimal Challenge, and giving Meaningful Feedback.</p>
-
-													</div>
-												</section>
-
-												<section  class="wrapper style1">
-													<div class="inner style1">
-														<span class="image left"><img src="support.png" alt=""/></span>
-
-														<h2>Improving Opportunity</h2>
-															<p>We improved Opportunity by targeting Environmental Restructuring. We used the Behavior Change Techniques of Prompts/Cues, Covert Learning, Valued Self-Identity, and Social Support.</p>
-															 <p>We create performance aids to support practice while coaches were with peers and clients. We also supported Relatedness by creating a community with ongoing Connection, Collaboration, and Compassion from peers. </p>
 													</div>
 												</section>
 
@@ -253,165 +183,6 @@
 												 </div>
 												</section>
 
-												<section class="wrapper style1">
-													<div class="inner">
-
-														<h2>Phase 1</h2>
-														<h3>Introductions & Onboarding</h3>
-														<p>During this phase, coaches were introduced to their instructor and peers, and guided to share their learning goals with the group. Then they received instruction on the practical applications of Self-Determination Theory, Motivational Interviewing, the Dual-Process Model of Habit Formation.</p>
-
-												 </div>
-												</section>
-
-												<section class="wrapper style1">
-													<div class="inner">
-
-														<h2>Phase 2</h2>
-														<h3>Habits of Autonomy Support</h3>
-														<p>During this phase, coaches received daily instruction and feedback on providing Autonomy Support. Coaches ended this phase with improved ability to help clients make meaningful choices.</p>
-
-															<div class="table-wrapper">
-																							<table>
-																								<tbody>
-																									<tr>
-																										<td><b>Habit</b></td>
-																										<td><b>Open-Ended Questions</b></td>
-																									</tr>
-																									<tr>
-																										<td>1</td>
-																										<td>Ask an open-ended question</td>
-																									</tr>
-																									<tr>
-																										<td>2</td>
-																										<td>Get clients interested in their own experience</td>
-																									</tr>
-																									<tr>
-																										<td>3</td>
-																										<td>Help clients notice their personal values</td>
-																									</tr>
-																									<tr>
-																										<td><b>Habit</b></td>
-																										<td><b>Reflective Listening Statements</b></td>
-																									</tr>
-																									<tr>
-																										<td>1</td>
-																										<td>Paraphrase one word your client said</td>
-																									</tr>
-																									<tr>
-																										<td>2</td>
-																										<td>Paraphrase motivations</td>
-																									</tr>
-																									<tr>
-																										<td>3</td>
-																										<td>Paraphrase negative emotions</td>
-																									</tr>
-																								</tbody>
-																							</table>
-											</div>
-
-												 </div>
-												</section>
-
-
-												<section class="wrapper style1">
-													<div class="inner">
-
-														<h2>Phase 3</h2>
-														<h3>Habits of Competence Support</h3>
-														<p>Coaches received daily instruction and feedback on providing Competence Support. Coaches ended this phase with improved ability to help clients feel more successful.</p>
-
-															<div class="table-wrapper">
-																							<table>
-																								<tbody>
-																									<tr>
-																										<td><b>Habit</b></td>
-																										<td><b>Client Habit Design</b></td>
-																									</tr>
-																									<tr>
-																										<td>1</td>
-																										<td>Writing Habit Statements</td>
-																									</tr>
-																									<tr>
-																										<td>2</td>
-																										<td>Goldilocksing (creating optimal challenge)</td>
-																									</tr>
-																									<tr>
-																										<td>3</td>
-																										<td>Designing Core Habits</td>
-																									</tr>
-																									<tr>
-																										<td><b>Habit</b></td>
-																										<td><b>Motivational Feedback</b></td>
-																									</tr>
-																									<tr>
-																										<td>1</td>
-																										<td>Give an unexpected compliment</td>
-																									</tr>
-																									<tr>
-																										<td>2</td>
-																										<td>Give informational feedback on the process</td>
-																									</tr>
-																									<tr>
-																										<td>3</td>
-																										<td>Give developmental feedback</td>
-																									</tr>
-																								</tbody>
-																							</table>
-											 </div>
-
-												 </div>
-												</section>
-
-												<section class="wrapper style1">
-													<div class="inner">
-
-														<h2>Phase 4</h2>
-														<h3>Habits of Belonging Support</h3>
-														<p>Coaches received daily instruction and feedback on providing Belonging Support to clients. Coaches ended this phase with improved ability to help clients feel valued and included in a community.</p>
-
-															<div class="table-wrapper">
-																<div class="table-wrapper">
-																								<table>
-																									<tbody>
-																										<tr>
-																											<td><b>Habit</b></td>
-																											<td><b>Create Connection</b></td>
-																										</tr>
-																										<tr>
-																											<td>1</td>
-																											<td>Introduce your clients to each other</td>
-																										</tr>
-																										<tr>
-																											<td>2</td>
-																											<td>Invite clients to share reflections with each other</td>
-																										</tr>
-																										<tr>
-																											<td>3</td>
-																											<td>Invite clients to teach each other</td>
-																										</tr>
-																										<tr>
-																											<td><b>Habit</b></td>
-																											<td><b>Foster Psychological Safety</b></td>
-																										</tr>
-																										<tr>
-																											<td>1</td>
-																											<td>Share a story about how you learned from failure</td>
-																										</tr>
-																										<tr>
-																											<td>2</td>
-																											<td>Show clients how to ask for support from the group</td>
-																										</tr>
-																										<tr>
-																											<td>3</td>
-																											<td>Have a crucial conversation with someone violating your community values</td>
-																										</tr>
-																									</tbody>
-																								</table>
-												 </div>
-											 </div>
-
-												 </div>
-												</section>
 
 												<section id="three" class="wrapper style1">
 													<div class="inner">
