--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -303,7 +303,7 @@
 																							<table>
 																								<tbody>
 																									<tr>
-																										<td><b>Habit</b></td>
+																										<td class="align-center"><b>Habit</b></td>
 																										<td><b>Client Habit Design</b></td>
 																									</tr>
 																									<tr>
@@ -319,7 +319,7 @@
 																										<td>Designing Core Habits</td>
 																									</tr>
 																									<tr>
-																										<td><b>Habit</b></td>
+																										<td class="align-center"><b>Habit</b></td>
 																										<td><b>Motivational Feedback</b></td>
 																									</tr>
 																									<tr>
@@ -353,7 +353,7 @@
 																								<table>
 																									<tbody>
 																										<tr>
-																											<td><b>Habit</b></td>
+																											<td class="align-center"><b>Habit</b></td>
 																											<td><b>Create Connection</b></td>
 																										</tr>
 																										<tr>
@@ -369,7 +369,7 @@
 																											<td>Invite clients to teach each other</td>
 																										</tr>
 																										<tr>
-																											<td><b>Habit</b></td>
+																											<td class="align-center"><b>Habit</b></td>
 																											<td><b>Foster Psychological Safety</b></td>
 																										</tr>
 																										<tr>
