--- a/projects/essentials/index.html
+++ b/projects/essentials/index.html
@@ -108,8 +108,8 @@
 																						<table>
 																							<tbody>
 																								<tr>
-																									<td>Requirement</td>
-																									<td>Description</td>
+																									<td><b>Requirement</b></td>
+																									<td><b>Description</b></td>
 																								</tr>
 																								<tr>
 																									<td class="align-center">1</td>
