--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -120,24 +120,31 @@
 														<table>
 															<tbody>
 																<tr>
-																	<td><b>Requirements</b></td>
+																	<td><b>Requirement</b></td>
+																	<td><b>Description</b></td>
 																</tr>
 																<tr>
+																	<td class="align-center">1</td>
 																	<td>Be beautiful (duh)</td>
 																</tr>
 																<tr>
+																	<td class="align-center">2</td>
 																	<td>Be available in PDF and print</td>
 																</tr>
 																<tr>
+																	<td class="align-center">3</td>
 																	<td>Contain an editorial</td>
 																</tr>
 																<tr>
+																	<td class="align-center">4</td>
 																	<td>Contain reviews of resarch with quotes from researchers explaining the applications</td>
 																</tr>
 																<tr>
+																	<td class="align-center">5</td>
 																	<td>Contain as many "practical tips" as possible</td>
 																</tr>
 																<tr>
+																	<td class="align-center">6</td>
 																	<td>Cost no more than $0.40 per page</td>
 																</tr>
 
@@ -156,6 +163,39 @@
 																	</div>
 																 <div class="8u$">
 																	 <p>In 2016, Habitry sold Essentials of Habit Coaching as part of Habitry Professionals to <a href="https://liftthebar.com/">Lift the Bar</a> in the UK. It is now the largest, evidence-based behavior change education system in the UK and part of the largest experiment in autonomy-supportive education in the world.</p>
+																	 <table>
+																		 <tbody>
+																			 <tr>
+																				 <td><b>Requirement</b></td>
+																				 <td><b>Description</b></td>
+																			 </tr>
+																			 <tr>
+																				 <td class="align-center">1</td>
+																				 <td>Be beautiful (duh)</td>
+																			 </tr>
+																			 <tr>
+																				 <td class="align-center">2</td>
+																				 <td>Be available in PDF and print</td>
+																			 </tr>
+																			 <tr>
+																				 <td class="align-center">3</td>
+																				 <td>Contain an editorial</td>
+																			 </tr>
+																			 <tr>
+																				 <td class="align-center">4</td>
+																				 <td>Contain reviews of resarch with quotes from researchers explaining the applications</td>
+																			 </tr>
+																			 <tr>
+																				 <td class="align-center">5</td>
+																				 <td>Contain as many "practical tips" as possible</td>
+																			 </tr>
+																			 <tr>
+																				 <td class="align-center">6</td>
+																				 <td>Cost no more than $0.40 per page</td>
+																			 </tr>
+
+																		 </tbody>
+																	 </table>
 
 																 </div>
 													</div>
