--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -157,7 +157,7 @@
 													<div class="row">
 																<!-- Text -->
 																	<div class="4u">
-																		<h2>The Design Process</h2>
+																		<h2>Design Process</h2>
 																	</div>
 																 <div class="8u$">
 																	 <h3>The 13 Steps</h3>
