--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -262,13 +262,13 @@
 
 																<div class="align-center">
 
-																	<button class="demo" onclick="currentDiv(1)">1</button>
-																	<button class="demo" onclick="currentDiv(2)">2</button>
-																	<button class="demo" onclick="currentDiv(3)">3</button>
-																	<button class="demo" onclick="currentDiv(3)">4</button>
+																	<button class="small demo" onclick="currentDiv(1)">1</button>
+																	<button class="small demo" onclick="currentDiv(2)">2</button>
+																	<button class="small demo" onclick="currentDiv(3)">3</button>
+																	<button class="small demo" onclick="currentDiv(4)">4</button>
 																		<br>
-																		<button class="demo" onclick="plusDivs(-1)">❮ Prev</button>
-																		<button class="demo" onclick="plusDivs(1)">Next ❯</button>
+																		<button class="small demo" onclick="plusDivs(-1)">❮ Prev</button>
+																		<button class="small demo" onclick="plusDivs(1)">Next ❯</button>
 																	</div>
 																</div>
 																	<script>
