--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -247,7 +247,7 @@
 																		<h2>The Product</h2>
 																	</div>
 																 <div class="8u$">
-																	 <p>An example of using buttons to indicate how many slides there are in the slideshow, and which slide the user is currently viewing.</p>
+																	 <p>Feel free to click on any image below to look at the magainze in all it's beauty.</p>
 																<div class="slider">
 																			<span class="image fit">
 																				<a href="print-cover.png"><img class="mySlides" src="print-cover-thumb.png"></a></span>
