--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -81,7 +81,7 @@
 													<div class="row">
 																<!-- Text -->
 																	<div class="4u">
-																		<span class="image titleimg fit "><img src="vision.jpg" width=alt=""/></span>
+																		<span class="image titleimg"><img src="vision.jpg" width=alt=""/></span>
 																	</div>
 																 <div class="8u$">
 																	 <h2>The Approach</h2>
