--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -78,12 +78,8 @@
 
 												<section class="wrapper style1">
 													<div class="inner">
-													<div class="row">
-																<!-- Text -->
-																	<div class="4u">
-																		<span class="image titleimg"><img src="vision.jpg" width=alt=""/></span>
-																	</div>
-																 <div class="8u$">
+																		<span class="image titleimg left"><img src="vision.jpg" width=alt=""/></span>
+
 																	 <h2>The Approach</h2>
 
 															 		<p>This project was more straight forward than other Habitry projects: research what else was out in the market, then make something 10x better on a ridiculously short time span. </p>
@@ -92,7 +88,6 @@
 
 															 		<p>Plus, Omar had done this before. He'd recruited a team to publish a research review for HR managers in graduate school. So he brought that experience to bear on <em>The Motivator</em>.</p>
 
-																 </div>
 													</div>
 												</section>
 
