--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -255,7 +255,7 @@
 													<div class="inner"</div>
 													<div style="background-color: #b74e91;" class="box">
 														<h2>Killer Feature: Reseacher Interviews</h2>
-														<p>Since finishing graduate school, Stevo and Omar have been attending conventions and sharing the stage with lots of awesome Behavioral Psychology researchers. They put those connections to use when they were gathering studies for <em>The Motivator</em> and emailed the researchers for exclusive blurbs and comments on how they believed the research could be applied in a health-coaching context.</p>
+														<p>Since finishing graduate school, Stevo and Omar have been attending conventions and sharing the stage with lots of awesome Motivation and Behavior Change Scientists. They put those connections to use when they were gathering studies for <em>The Motivator</em> and emailed the researchers for exclusive blurbs and comments on how they believed the research could be applied in a health-coaching context.</p>
 													</div>
 												</section>
 
