--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -267,7 +267,11 @@
 																		<h2>The Product</h2>
 																	</div>
 																 <div class="8u$">
-																	 <p>Feel free to click on any image below to look at the magazine in all it's beauty.</p>
+																		 <div class="align-center">
+																		 <button class="fit demo" onclick="plusDivs(1)">Next ❯</button>
+																			 <button class="fit demo" onclick="plusDivs(-1)">❮ Prev</button>
+
+																	 </div>
 																<div class="slider">
 																			<span class="image fit">
 																				<a href="print-cover.png"><img class="mySlides" src="print-cover-thumb.png"></a></span>
@@ -279,10 +283,10 @@
 																				<a href="print-03.png"><img class="mySlides" src="print-03-thumb.png"></a></span>
 																			<span class="image fit">
 																				<a href="print-04.png"><img class="mySlides" src="print-04-thumb.png"></a></span>
+																				<p>Feel free to click on any image above to look at the magazine in all it's beauty.</p>
 
 																<div class="align-center">
-																		<button class="fit demo" onclick="plusDivs(-1)">❮ Prev</button>
-																		<button class="fit demo" onclick="plusDivs(1)">Next ❯</button>
+
 																	</div>
 																</div>
 																	<script>
