--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -37,7 +37,7 @@
 								<div class="inner">
 									<h1 class="major">The Motivator</h1>
 									<span class="image right"><img src="title.png" alt=""/></span>
-									<h2>An annural research review of Motivation and Behavior Change Science</h2>
+									<h2>An annual research review of Motivation and Behavior Change Science</h2>
 									<a style="border-bottom:none;"href="#mission"><i class="icon fas fa-arrow-down fa-2x"></i></a>
 								</div>
 
