--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<span class="icon major fa-book"></span>
 										<h3>Motivating Humans</h3>
 										<p>The science and lore of helping people stay motivated in a de-motivating world.</p>
-										<a href="http://ganai.com/projects/motivatinghumans/" class="button fit">Learn More</a>
+										<a href="http://ganai.com/projects/motivatinghumans/" class="button fit disabled">Coming Soon</a>
 									</section>
 								</div>
 
