--- a/projects/index.html
+++ b/projects/index.html
@@ -85,7 +85,7 @@
 									<section>
 										<span class="icon major fa-columns"></span>
 										<h3>The Motivator</h3>
-										<p>Habitry's research review of behavioral psychology. Sold by Habitry in 2017.</p>
+										<p>Habitry's research review of Behavior Change Science. Sold by Habitry in 2017.</p>
 										<a href="http://ganai.com/projects/motivator/" class="button fit">Learn More</a>
 									</section>
 									<section>
