--- a/resume/index.html
+++ b/resume/index.html
@@ -45,7 +45,7 @@
 	    <section class="item">
 	        <h5 class="mb-6">Summary</h5>
 	          <div class="inline-flex justify-between w-full">
-	          <p class="text-justify">I help companies define, design, and develop for behavior change outcomes with and within products, projects, and programs. I'm an expert in the practical application of Motivation & Behavior Change Science, Product/Project Management, and Data Analytics.</div>
+	          <p class="text-justify">I help companies define, design, and develop for behavior change outcomes with and within products, projects, and programs. I'm an expert in the practical application of Behavior Change Science, Product/Project Management, and Data Analytics.</div>
 	    </section>
 	  <!-- Work -->
 	    <section class="item">
@@ -133,7 +133,7 @@
 
 	            <div class="skill_card">
 	              <div class="skill_card-inner">
-	                <p>Motivation & Behavior Change Science</p>
+	                <p>Behavior Change Science</p>
 	                  <div class="skill_rating">
 	                  <span class="skill_rating-item"></span>
 										<span class="skill_rating-item"></span>
@@ -242,13 +242,13 @@
 
 	    <!-- Projects -->
 	      <section class="item">
-	          <h5>Projects</h5>
+	          <h5>Select Projects</h5>
 	  <!--          <div class="inner-cols inline-flex justify-between w-full"> -->
 
 	              <div class="inline-flex justify-between w-full">
 	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 	          <!--       <div class="project_card-inner"> -->
-	                  <h3 class="project_card-name">Habitry iOS App</h3>
+	                  <h3 class="project_card-name"><a href="../projects/habitryios/">Habitry iOS App</a></h3>
 	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">Dec 2014 &ndash; Dec 2016</h3>
 	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Dec 2014 &ndash; Dec 2016</h3>
 	                </div> <!-- inline-flex -->
@@ -277,7 +277,7 @@
 	              <div class="inline-flex justify-between w-full">
 	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 	          <!--       <div class="project_card-inner"> -->
-	                  <h3 class="project_card-name">Habitry Professionals</h3>
+	                  <h3 class="project_card-name"><a href="../projects/habitrypros/">Habitry Professionals</a></h3>
 	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">Dec 2015 &ndash; Dec 2016</h3>
 	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Dec 2015 &ndash; Dec 2016</h3>
 	                </div> <!-- inline-flex -->
@@ -305,7 +305,7 @@
 							<div class="inline-flex justify-between w-full">
 				<!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 					<!--       <div class="project_card-inner"> -->
-									<h3 class="project_card-name">Essentials of Habit Coaching</h3>
+									<h3 class="project_card-name"><a href="../projects/essentials/">Essentials of Habit Coaching</a></h3>
 									<h3 class="hidden sm:block md:block lg:block xl:block print:block">Jun 2016 &ndash; May 2015</h3>
 									<h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Jun 2016 &ndash; May 20156</h3>
 								</div> <!-- inline-flex -->
@@ -328,11 +328,37 @@
 										</div>
 									<!-- </div> -->
 						<!--    </div> -->
+						<div class="inline-flex justify-between w-full">
+			<!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
+				<!--       <div class="project_card-inner"> -->
+								<h3 class="project_card-name"><a href="../projects/motivator/">The Motivator</a></h3>
+								<h3 class="hidden sm:block md:block lg:block xl:block print:block">Jan 2017 &ndash; Present</h3>
+								<h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Jan 2017 &ndash; Present</h3>
+							</div> <!-- inline-flex -->
+
+										<p class="project_card-roles">
+												<span class="italic">Product Management, </span>
+												<span class="italic">Writing, </span>
+												<span class="italic">Research Methods & Analytics</span>
+										</p>
+									<p class="project_card-description">An annual research review of Behavior Change Science.</p>
+									<div class="project_card-highlights">
+									<ul class="fa-ul">
+
+										<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Scoured top 25 Behavioral Science research journals and maintained knowledge system.</li>
+
+										<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Developed evidence-based, actionable, engaging content for non-academic audience.</li>
+
+										<li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Read by thousands of coach practitioners every quarter.</li>
+									</ul>
+									</div>
+								<!-- </div> -->
+					<!--    </div> -->
 
 	              <div class="inline-flex justify-between w-full">
 	        <!--      <div class="project_card w-full sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2 print:w-1/2"> -->
 	          <!--       <div class="project_card-inner"> -->
-	                  <h3 class="project_card-name">The Motivate Summits</h3>
+	                  <h3 class="project_card-name"><a href="www.motivatesumm.it">The Motivate Summits</a></h3>
 	                  <h3 class="hidden sm:block md:block lg:block xl:block print:block">Dec 2014 &ndash; Dec 2016</h3>
 	                  <h3 class="sm:hidden md:hidden lg:hidden xl:hidden print:hidden">Dec 2014 &ndash; Dec 2016</h3>
 	                </div> <!-- inline-flex -->
@@ -353,7 +379,7 @@
 
 	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Maintained an active community with over 600 members.</li>
 
-	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Developed into an open-source knowledge base for answering health coaches&#39; questions about behavior change.</li>
+	                      <li><span class="fa-li"><i class="fas fa-circle" data-fa-transform="shrink-12"></i></span>Developed into an open-source knowledge base behavior change questions for coaches.</li>
 
 	                    </ul>
 	                    </div>
@@ -418,7 +444,7 @@
 
 				<!-- Publications -->
 					 <section class="item">
-							 <h5>Publications</h5>
+							 <h5>Select Publications</h5>
 
 							 <div class="inline-flex justify-between w-full">
 								 <h3 class="italic">Motivating Humans</h3><h3>2019</h3>
@@ -426,14 +452,14 @@
 									 <p class="">The science and lore of helping people stay motivated in a de-motivating world.</p>
 
 							 <div class="inline-flex justify-between w-full">
-										 <h3 class="italic">Practical Motivation Science</h3><h3>2017 &ndash; Present </h3>
+										 <h3 class="italic"><a href="https://medium.com/practical-motivation-science/">Practical Motivation Science</a></h3><h3>2017 &ndash; Present </h3>
 									 </div>
 					 <p class="">1,000-15,000 word articles on the practical applications of Motivation Science for product managers and designers. 6,000+ views of Season 1 so far.</p>
 							 <div class="inline-flex justify-between w-full">
 
-								 <h3 class="italic">The Motivator</h3><h3>2017 &ndash; Present</h3>
+								 <h3 class="italic"><a href="../projects/motivator/">The Motivator</a></h3><h3>2017 &ndash; Present</h3>
 							 </div>
-						<p class="">A research review of Motivation Science read in print by thousands of health coaches each quarter.</p>
+						<p class="">A research review of Behavior Change Science. read in print by thousands of health coaches each quarter.</p>
 
 					 </section>
 
