--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#projects">Projects</a></li>
 							<li><a href="#writing">Writing</a></li>
-							<li><a href="#email">Email</a></li>
+							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -113,15 +113,28 @@
 										<section>
 												<ul class="actions">
 													<li><a href="https://medium.com/practical-motivation-science" class="button">Medium Publication</a></li>
+												</ul>
 								</div>
 							</div>
 						</section>
 
 						<!-- Email -->
-							<section id="email" class="wrapper style1 fade-up">
+							<section id="contact" class="wrapper style1 fade-up">
 								<div class="inner">
-									<h2>Email</h2>
-									<p>You can contact me at <code>omar@ganai.com</code>. I read and respond to emails in the mornings and evenings.</p>
+									<h2>Personal Email</h2>
+									<p>You can contact me at <code>omar@ganai.com</code>. I respond to emails that are <a href="http://five.sentenc.es">five sentences</a> or less as soon as I have a free moment. Anything longer, I bucket into a folder that is checked and responded to in the morning and afternoon.</p>
+									<div class="box">
+										<h3>If confidentiality is important...</h3>
+										If you would like to send me an encrypted message, please use <a href="https://keybase.io/encrypt#oganai">this form</a>. You can verify this is me at my <a href="https://keybase.io/oganai">keybase profile</a>.</p>
+									</div>
+									<br>
+									<h2>Business Email</h2>
+									<p>If you have questions or comments about <a href="http://habitry.com">Habitry</a> please use this email: <code>omar@habitry.com</code>. I aim to respond in the morning and afternoon.</p>
+									<h2>Phone Calls</h2>
+									<p>If you want to talk about something that doesn't fit into a five-sentence email, feel free to schedule a phone call. I keep my calendar up-to-date, so all you have to do is pick a convenient time.</p>
+									<ul class="actions">
+										<li><a href="https://calendly.com/callomar" class="button">Schedule a call</a></li>
+									</ul>
 
 							</section>
 			</div>
