--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 									<h2>Phone Calls</h2>
 									<p>If you want to talk about something that doesn't fit into a five-sentence email, feel free to schedule a phone call. I keep my calendar up-to-date, so all you have to do is pick a convenient time.</p>
 									<ul class="actions">
-										<li><a href="https://calendly.com/callomar" class="button">Schedule a call</a></li>
+										<li><a href="http://ganai.com/call" class="button">Schedule a call</a></li>
 									</ul>
 
 							</section>
