--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -182,7 +182,7 @@
 
 								<p>We helped coaches to get started with as little fuss as possible by designing a great onboarding experience (Shaping Knowledge, Goal-Setting, Valued Self-Identity), habits to use with clients (Shaping Knowledge).
 
-								<p>We also built an analytics system that generated insights (Feedback on Behavior & Re-attribition) so they could better manage their groups. For example, we did text analysis to measure changes in use of words that are markers of <a href="http://habitry.link/motivating-humans">Basic Psychological Need</a> support. This gave coaches insight into how well they were motivating clients in their groups.
+								<p>We also built an analytics system that generated insights (Feedback on Behavior & Re-attribution) so they could better manage their groups. For example, we did text analysis to measure changes in use of words that are markers of <a href="http://habitry.link/motivating-humans">Basic Psychological Need</a> support. This gave coaches insight into how well they were motivating clients in their groups.
 
 
 								</p>
@@ -196,7 +196,7 @@
 							<h2>Improving Opportunity</h2>
 								<p>The final step was to improve  Opportunity.</p>
 
-								<p>We created the Motivate Collective to provide Social Support, Shape Knowledge, and create a Valued Self-Identity for health coaches as MOTIVATORS. At it's peak, there were 600+ members in the Motivate Collective.</p>
+								<p>We created the Motivate Collective to provide Social Support, Shape Knowledge, and create a Valued Self-Identity for health coaches as MOTIVATORS. At the peak, there were 600+ members in the Motivate Collective.</p>
 						</div>
 					</section>
 
