--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -110,7 +110,7 @@
 															<li>Empower coaches to interact with and support each other</li>
 															<li>Generate daily content</li>
 															<li>Deliver coaches daily feedback on their progress</li>
-															<li>Be based on a UI they were already familar with</li>
+															<li>Be based on a UI they were already familiar with</li>
 															<li>Grow and include new coaches at wildly differing skill levels</li>
 														</ol>
 													 </div>
