--- a/projects/motivator/index.html
+++ b/projects/motivator/index.html
@@ -50,7 +50,7 @@
 
 														<p>In 2014, Omar teamed up with <a href="http://habitry.com">Habitry</a> co-founders Steven M. Ledbetter and Vanessa Naylon to work on our mission of <b>"helping the most people to help the most people"</b> by making products for health coaches.</p>
 
-														<p>Once Habitry was running with <a href="../habitryios/">Habitry iOS</a>, <a href="../habitrypros/">Habitry Professionals</a>, and <a href="../essentials/">Essentials of Habit Coaching</a>, coaches began asking for a reasearch review to learn the latest in Motivation Science. It was the most common request that we received since starting the <a href="https://motivatesumm.it/">Motivate Summits</a>, so we thought it was worth testing demand with a single issue. </p>
+														<p>Once Habitry was running with <a href="../habitryios/">Habitry iOS</a>, <a href="../habitrypros/">Habitry Professionals</a>, and <a href="../essentials/">Essentials of Habit Coaching</a>, coaches began asking for a research review to learn the latest in Motivation Science. It was the most common request that we received since starting the <a href="https://motivatesumm.it/">Motivate Summits</a>, so we thought it was worth testing demand with a single issue. </p>
 
 													</div>
 
@@ -106,7 +106,7 @@
 
 																		<p>At this point, Habitry had developed a Facebook community of over 600 health coaches. This was  a treasure trove of data from what we had discussed in the Facebook group over the previous year. Omar did a content analysis of this data to uncover the most common questions, favorite topics, and recurring problems.</p>
 
-																		<p>Next, we asked them about other research reviews they were reading. Once we had our list of what else was out there, we purchased copies of the reviews they had mentioned and disected what we thought we needed for an MVP. We then took those ideas back to our community to see if we were in the ballpark on what they wanted.</p>
+																		<p>Next, we asked them about other research reviews they were reading. Once we had our list of what else was out there, we purchased copies of the reviews they had mentioned and dissected what we thought we needed for an MVP. We then took those ideas back to our community to see if we were in the ballpark on what they wanted.</p>
 																	</div>
 																	</section>
 
@@ -254,7 +254,7 @@
 												<section class="wrapper style1">
 													<div class="inner"</div>
 													<div style="background-color: #b74e91;" class="box">
-														<h2>Killer Feature: Reseacher Interviews</h2>
+														<h2>Killer Feature: Researcher Interviews</h2>
 														<p>Since finishing graduate school, Stevo and Omar have been attending conventions and sharing the stage with lots of awesome Motivation and Behavior Change Scientists. They put those connections to use when they were gathering studies for <em>The Motivator</em> and emailed the researchers for exclusive blurbs and comments on how they believed the research could be applied in a health-coaching context.</p>
 													</div>
 												</section>
