--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -205,7 +205,7 @@
 						<div style="background-color: #b74e91;" class="box">
 							<h2>Killer Feature: Motivating Push Notifications</h2>
 							<span class="image titleimg right"><img src="push.jpg" width=alt=""/></span>
-							<p>In testing, it became obvious that the make-or-break feature of the mobile app woud be push notifications. Coaches and their clients had both mentioned them frequently in discovery, and in 2014 people weren't quite sick of them yet.</p>
+							<p>In testing, it became obvious that the make-or-break feature of the mobile app would be push notifications. Coaches and their clients had both mentioned them frequently in discovery, and in 2014 people weren't quite sick of them yet.</p>
 							<p>In order to make sure we got it right, Omar looked at the research on creating motivating push notifications from Self-Determination Theory. Then he went a step further and recreated one of the study protocols. He  wrote about the lessons from this experiment with Steven M. Ledbetter in <b><a href="http://habitry.link/push">How to Design Motivating Push Notifications.</a></b></p>
 
 						</div>
@@ -237,7 +237,7 @@
 											<h2>Results</h2>
 										</div>
 									 <div class="8u$">
-										 <p>At it's peak, Habitry iOS had more than 1,000 users on the platform. Health coaches were making an average of $3,000 per month on the app and clients were checking in with 72% daily adherence and 68% stuck around for a full 365 days.</p>
+										 <p>At the peak, Habitry iOS had more than 1,000 users on the platform. Health coaches were making an average of $3,000 per month on the app and clients were checking in with 72% daily adherence and 68% stuck around for a full 365 days.</p>
 
 										 <a href="https://www.youtube.com/watch?v=MK0PZ2uAd9E"><span class="image titleimg fit"><img src="video2.jpg" width=alt=""/></span></a>
 
